--- a/public/mystyle.css
+++ b/public/mystyle.css
@@ -48,3 +48,38 @@ body
     text-align: center;
     color: black;
 }
+.form-group{
+    margin: 10px;
+}
+.fakturas{
+    background: rgba(0,0,0,0.7);
+    border-radius: 10px;
+    color: #fff;
+    box-shadow: 0 15px 25px rgba(0,0,0,0.5);
+    padding: 15px;
+    width: 30%;
+    display: flex;
+    flex-direction: column;
+    margin-left: 35%;
+}
+label{
+    margin-right: 10px;
+    display: flex;
+    flex-direction: column;
+}
+.contact{
+    background: rgba(0,0,0,0.7);
+    border-radius: 10px;
+    color: #fff;
+    box-shadow: 0 15px 25px rgba(0,0,0,0.5);
+    padding: 15px;
+    width: 20%;
+    display: flex;
+    flex-direction: column;
+    margin-left: 40%;
+
+}
+button{
+    margin-left: 40%;
+    width: 20%;
+}
