--- a/public/mystyle.css
+++ b/public/mystyle.css
@@ -17,7 +17,7 @@ body
 }
 .option{
     color: white;
-    margin-right: 200px;
+    margin-right: 170px;
     margin-top: 20px;
     margin-bottom: 20px;
     padding: 10px;
@@ -148,4 +148,15 @@ label{
 }
 .ebtn:hover {
     background-color: #113ee1;
+}
+.licences{
+    background: rgba(0,0,0,0.7);
+    border-radius: 10px;
+    color: #fff;
+    box-shadow: 0 15px 25px rgba(0,0,0,0.5);
+    padding: 15px;
+    width: 20%;
+    display: flex;
+    flex-direction: column;
+    margin-left: 40%;
 }
