--- a/public/mystyle.css
+++ b/public/mystyle.css
@@ -161,3 +161,15 @@ label{
     flex-direction: column;
     margin-left: 40%;
 }
+
+.devices{
+    background: rgba(0,0,0,0.7);
+    border-radius: 10px;
+    color: #fff;
+    box-shadow: 0 15px 25px rgba(0,0,0,0.5);
+    padding: 15px;
+    width: 20%;
+    display: flex;
+    flex-direction: column;
+    margin-left: 40%;
+}
